--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
               <a href="http://www.pescagrosa.com/#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">¿Quiénes somos? <span class="mb-indicator"></span></a>
               <ul class="dropdown-menu">
                 <li><a href="https://jidrovoc.github.io/Agro_Web/Quienes_somos.html">Pescagrosa</a></li>
-                <li><a href="./Quienes_somos.html">Misión</a></li>
+                <li><a href="https://jidrovoc.github.io/Agro_Web/templates/Quienes_somos.html">Misión</a></li>
                 <li><a href="./Quienes_somos.html">Visión</a></li>
               </ul>
             </li>
