--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
               <a href="http://www.pescagrosa.com/#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Productos <span class="mb-indicator"></span></a>
               <ul class="dropdown-menu">
                 <li><a href="./NuestroCamaron.html">Nuestro camarón</a></li>
-                <li><a href="http://www.pescagrosa.com/nuestros-peces/?es">Nuestros peces</a></li>
+                <li><a href="">Nuestros peces</a></li>
               </ul>
             </li>            
             
