--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 	<div class="dropdown mb-language">
 	  <a href="javascript:void(0)" class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown">Select Language	  <span class="mb-indicator"></span></a>
 	  <ul class="dropdown-menu">
-	    <li><a href="http://www.pescagrosa.com/?es">Spanish</a></li>
-	    <li><a href="http://www.pescagrosa.com/?en">English</a></li>
+	    <li><a href="https://jidrovoc.github.io/Agro_Web/?es">Spanish</a></li>
+	    <li><a href="https://jidrovoc.github.io/Agro_Web/?en">English</a></li>
 	  </ul>
 	</div>
 	
