--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
 	
 	<div class="mb-language-mobile">
 		<ul>
-		    <li><a href="http://www.pescagrosa.com/?es">SP</a></li>
-		    <li><a href="http://www.pescagrosa.com/?es">|</a></li>		    
-		    <li><a href="http://www.pescagrosa.com/?en">EN</a></li>
+		    <li><a href="https://jidrovoc.github.io/Agro_Web/?es">SP</a></li>
+		    <li><a href="https://jidrovoc.github.io/Agro_Web/?es">|</a></li>		    
+		    <li><a href="https://jidrovoc.github.io/Agro_Web/?en">EN</a></li>
 		</ul>
 	</div>
 	  
