--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 	         <span class="border-nav"></span>
 	          
             <li class="dropdown">
-              <a href="http://www.pescagrosa.com/#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">¿Quiénes somos? <span class="mb-indicator"></span></a>
+              <a href="./Quienes_somos.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">¿Quiénes somos? <span class="mb-indicator"></span></a>
               <ul class="dropdown-menu">
                 <li><a href="./Quienes_somos.html">Pescagrosa</a></li>
                 <li><a href="./Quienes_somos.html">Misión</a></li>
