--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 		   
 			<div class="owl-carousel owl-theme owl-loaded">
 	        <div class="owl-stage-outer"><div class="owl-stage" style="transform: translate3d(-2160px, 0px, 0px); transition: all 0s ease 0s; width: 7560px;"><div class="owl-item cloned" style="width: 1070px; margin-right: 10px;"><div class="item">
-	              <h1>El mar es<br>nuestra vocación</h1>
+	              <h1>La agroindustria<br>es nuestra pasión</h1>
 	              <span class="sub">PESCAGROSA</span>
 	              <a href="http://pescagrosa.com/pescagrosa" class="mas">Ver más</a>
 	            </div></div><div class="owl-item cloned" style="width: 1070px; margin-right: 10px;"><div class="item">
@@ -128,11 +128,11 @@
 	              <span class="sub">PESCAGROSA</span>
 	              <a href="./Quienes_somos.html" class="mas">Ver más</a>
 	            </div></div><div class="owl-item active" style="width: 1070px; margin-right: 10px;"><div class="item">
-	              <h1>El mar es<br>nuestra vocación</h1>
+	              <h1>La agroindustria<br>es nuestra pasión</h1>
 	              <span class="sub">PESCAGROSA</span>
 	              <a href="./Quienes_somos.html" class="mas">Ver más</a>
 	            </div></div><div class="owl-item" style="width: 1070px; margin-right: 10px;"><div class="item">
-	              <h1>El mar es<br>nuestra vocación</h1>
+	              <h1>La agroindustria<br>es nuestra pasión</h1>
 	              <span class="sub">PESCAGROSA</span>
 	              <a href="./Quienes_somos.html" class="mas">Ver más</a>
 	            </div></div><div class="owl-item" style="width: 1070px; margin-right: 10px;"><div class="item">
@@ -140,11 +140,11 @@
 	              <span class="sub">PESCAGROSA</span>
 	              <a href="./Quienes_somos.html" class="mas">Ver más</a>
 	            </div></div><div class="owl-item cloned" style="width: 1070px; margin-right: 10px;"><div class="item">
-	              <h1>El mar es<br>nuestra vocación</h1>
+	              <h1>La agroindustria<br>es nuestra pasión</h1>
 	              <span class="sub">PESCAGROSA</span>
 	              <a href="./Quienes_somos.html" class="mas">Ver más</a>
 	            </div></div><div class="owl-item cloned" style="width: 1070px; margin-right: 10px;"><div class="item">
-	              <h1>El mar es<br>nuestra vocación</h1>
+	              <h1>La agroindustria<br>es nuestra pasión</h1>
 	              <span class="sub">PESCAGROSA</span>
 	              <a href="./Quienes_somos.html" class="mas">Ver más</a>
 	            </div></div></div></div><div class="owl-controls"><div class="owl-nav"><div class="owl-prev" style="">prev</div><div class="owl-next" style="">next</div></div><div class="owl-dots" style=""><div class="owl-dot active"><span></span></div><div class="owl-dot"><span></span></div><div class="owl-dot"><span></span></div></div></div></div>
