--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 	              <span class="sub">PESCAGROSA</span>
 	              <a href="http://pescagrosa.com/pescagrosa" class="mas">Ver más</a>
 	            </div></div><div class="owl-item cloned" style="width: 1070px; margin-right: 10px;"><div class="item">
-	              <h1>Nuestra vocación<br>es el mar</h1>
+	              <h1>Nuestra pasión<br>es la angroindustria</h1>
 	              <span class="sub">PESCAGROSA</span>
 	              <a href="./Quienes_somos.html" class="mas">Ver más</a>
 	            </div></div><div class="owl-item active" style="width: 1070px; margin-right: 10px;"><div class="item">
@@ -136,7 +136,7 @@
 	              <span class="sub">PESCAGROSA</span>
 	              <a href="./Quienes_somos.html" class="mas">Ver más</a>
 	            </div></div><div class="owl-item" style="width: 1070px; margin-right: 10px;"><div class="item">
-	              <h1>Nuestra vocación<br>es el mar</h1>
+	              <h1>Nuestra pasión<br>es la angroindustria</h1>
 	              <span class="sub">PESCAGROSA</span>
 	              <a href="./Quienes_somos.html" class="mas">Ver más</a>
 	            </div></div><div class="owl-item cloned" style="width: 1070px; margin-right: 10px;"><div class="item">
