--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 					</a>
 				</div>
 				<div class="col-sm-5">
-					<h1>Nuestros Camarones</h1>
+					<h1>Nuestras Ofertas</h1>
 					<hr>
 					<p>La calidad de nuestro camarón se debe a múltiples factores como: la alimentación, clima, técnicas de cosecha...</p>					
 					<a href="./NuestroCamaron.html" class="mas">Ver más</a>
