--- a/index.html
+++ b/index.html
@@ -188,12 +188,12 @@
 					<div class="item">
 						
 						<a href="javascript:void(0)">
-							<img src="./index_files/nuestros-peces.jpg" class="img-responsive" width="100%">
+							<img src="./index_files/allpa.jpg" class="img-responsive" width="100%">
 						</a>
 						
-						<a href="http://www.pescagrosa.com/nuestros-peces/?es" class="shadow">
+						<a href="https://allpavivaecuador.com/" class="shadow">
 							<div class="desc">
-								<h2>Nuestros peces</h2>
+								<h2>Superfoods</h2>
 								<span></span>
 							</div>
 						</a>
