--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
 					<div class="item">
 						
 						<a href="./Alimentacion.html">
-							<img src="./index_files/proceso.jpg" class="img-responsive" width="100%">
+							<img src="./index_files/procesos.jpg" class="img-responsive">
 						</a>
 						
 						<a href="./Alimentacion.html" class="shadow2">
