--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 			<div class="row">
 				<div class="col-sm-7">
 					<a href="./NuestroCamaron.html">
-						<img src="./index_files/nuestroscamarones.jpg" class="img-responsive" width="100%">
+						<img src="./index_files/group.jpg" class="img-responsive" width="100%">
 					</a>
 				</div>
 				<div class="col-sm-5">
