--- a/Alimentacion.html
+++ b/Alimentacion.html
@@ -169,7 +169,7 @@
 				<div class="col-sm-9">
 					<h1>Cultivo Sostenible</h1>
 					<hr>
-					<p>Gracias a técnicas empleadas como la cosecha de baja densidad, su ciclo cerrado de producción, selección genética y manejo de protocolos limpios, se garantiza la eficiencia, productividad de las camaroneras y la sustentabilidad de toda la región.</p>					
+					<p>Gracias a nuestros procesos de innovación, selección genética, manejo de protocolos de inocuidad y seguridad alimentaria y trazabilidad, garantizamos la eficiencia, productividad y sustentabilidad del país y la región.</p>					
 				</div>
 				<div class="col-sm-3">
 					<center>
