--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 				<div class="col-sm-5">
 					<h1>Nuestras Ofertas</h1>
 					<hr>
-					<p>La calidad de nuestro camarón se debe a múltiples factores como: la alimentación, clima, técnicas de cosecha...</p>					
+					<p>La calidad de nuestros productos se debe a múltiples factores como: la alimentación, clima, técnicas de cosecha...</p>					
 					<a href="./NuestroCamaron.html" class="mas">Ver más</a>
 				</div>
 			</div>
@@ -307,7 +307,7 @@
 									<h2>Beneficios</h2>
 									<span>Nutritivos</span> 
 									<hr>
-									<p>Diversas investigaciones sugieren que el camarón tiene niveles bajos de colesterol, por ejemplo, 100 gramos de este...</p>								
+									<p>Diversas investigaciones sugieren que el producto agroindustrial tiene niveles bajos de colesterol, por ejemplo...</p>								
 								</div>
 									
 							</div>
@@ -333,7 +333,7 @@
 									<h2>Nuestras</h2>
 									<span>Plantas</span>
 									<hr>
-									<p>Diversas investigaciones sugieren que el camarón tiene niveles bajos de colesterol, por ejemplo, 100 gramos de este...</p>								
+									<p>Contamos con tecnología de punta para la producción y selección de nuestra oferta exportable. Nuestros...</p>								
 								</div>
 									
 							</div>
