--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
             <li class="dropdown">
               <a href="http://www.pescagrosa.com/#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Productos <span class="mb-indicator"></span></a>
               <ul class="dropdown-menu">
-                <li><a href="./NuestroCamaron.html">Nuestro camarón</a></li>
-                <li><a href="">Nuestros peces</a></li>
+                <li><a href="./NuestroCamaron.html">Frutas</a></li>
+                <li><a href="">Vegetales</a></li>
               </ul>
             </li>            
             
