--- a/index.html
+++ b/index.html
@@ -521,7 +521,7 @@
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="./index_files/jquery.min.js.descarga"></script>
-    <script>window.jQuery || document.write('<script src="http://www.pescagrosa.com/js/jquery.min.js"><\/script>')</script>
+    <script>window.jQuery || document.write('<script src="./index_files/jquery.min.js"><\/script>')</script>
     <script src="./index_files/bootstrap.min.js.descarga"></script>
     <script src="./index_files/ie10-viewport-bug-workaround.js.descarga"></script>
 	<script src="./index_files/owl.carousel.min.js.descarga"></script>
