--- a/Frutas.html
+++ b/Frutas.html
@@ -56,7 +56,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-xs-12">
-				<a href="http://www.pescagrosa.com/?es" class="mb-logo-inside"></a>
+				<a href="./index_files" class="mb-logo-inside"></a>
 			</div>
 		</div>
 	</div>
@@ -79,7 +79,7 @@
 			</div>
 			<div class="col-sm-3 col-sm-offset-1">
 				<h3 class="mb-dropdown">
-					<a href="http://www.pescagrosa.com/nuestro-camaron/?es#productos" class="active">Productos</a>
+					<a href="./index_files" class="active">Productos</a>
 				</h3>
 			</div>
 			<div id="productos" class="col-sm-7">
@@ -91,7 +91,7 @@
 			
 			<div class="col-sm-3 col-sm-offset-1">
 				<h3 class="mb-dropdown">
-					<a href="http://www.pescagrosa.com/nuestro-camaron/?es#procesos">Procesos</a>
+					<a href="./index_files">Procesos</a>
 				</h3>
 			</div>
 			<div id="procesos" class="col-sm-7 vhidden">
