--- a/Quienes_somos.html
+++ b/Quienes_somos.html
@@ -54,7 +54,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-xs-12">
-				<a href="http://www.pescagrosa.com/?es" class="mb-logo-inside"></a>
+				<a href="./index.html" class="mb-logo-inside"></a>
 			</div>
 		</div>
 	</div>
@@ -65,51 +65,51 @@
 		<div class="row">
 			<div class="col-sm-3 col-sm-offset-1">
 				<h3 class="mb-dropdown">
-					<a href="http://www.pescagrosa.com/pescagrosa/?es#somos" class="active">¿Quiénes Somos?</a>
+					<a href="./index.html" class="active">¿Quiénes Somos?</a>
 				</h3>
 			</div>
 			<div id="somos" class="col-sm-7">
 				<ul>
-					<li><a href="http://www.pescagrosa.com/pescagrosa/?es#pescagrosa">Pescagrosa</a></li>
-					<li><a href="http://www.pescagrosa.com/pescagrosa/?es#vision">Visión</a></li>
-					<li><a href="http://www.pescagrosa.com/pescagrosa/?es#mision">Misión</a></li>
+					<li><a href="./?es#pescagrosa">Pescagrosa</a></li>
+					<li><a href="./?es#vision">Visión</a></li>
+					<li><a href="./?es#mision">Misión</a></li>
 				</ul>
 			</div>
 			<div class="col-sm-3 col-sm-offset-1">
 				<h3 class="mb-dropdown">
-					<a href="http://www.pescagrosa.com/pescagrosa/?es#productos">Productos</a>
+					<a href="./?es#productos">Productos</a>
 				</h3>
 			</div>
 			<div id="productos" class="col-sm-7 vhidden">
 				<ul>
-					<li><a href="http://www.pescagrosa.com/nuestro-camaron/?es">Nuestros camarones</a></li>
-					<li><a href="http://www.pescagrosa.com/nuestros-peces/?es">Nuestros peces</a></li>
+					<li><a href="./Frutas.html">Frutas</a></li>
+					<li><a href="./Frutas.html">Vegetales</a></li>
 				</ul>
 			</div>
 			
 			<div class="col-sm-3 col-sm-offset-1">
 				<h3 class="mb-dropdown">
-					<a href="http://www.pescagrosa.com/pescagrosa/?es#procesos">Procesos</a>
+					<a href="./?es#procesos">Procesos</a>
 				</h3>
 			</div>
 			<div id="procesos" class="col-sm-7 vhidden">
 				<ul>
-					<li><a href="http://www.pescagrosa.com/procesos/?es#alimentacion">Alimentación y clima</a></li>
-					<li><a href="http://www.pescagrosa.com/procesos/?es#beneficios">Beneficios nutritivos</a></li>
-					<li><a href="http://www.pescagrosa.com/procesos/?es#cultivo">Cultivo sostenible</a></li>
+					<li><a href="./Alimentacion.html">Alimentación y clima</a></li>
+					<li><a href="./Alimentacion.html">Beneficios nutritivos</a></li>
+					<li><a href="./Alimentacion.html">Cultivo sostenible</a></li>
 				</ul>
 			</div>
 			
 			<div class="col-sm-3 col-sm-offset-1">
 				<h3>
-					<a href="http://www.pescagrosa.com/exportaciones/?es">Exportaciones</a>
+					<a href="./Exportaciones.html">Exportaciones</a>
 				</h3>
 			</div>
 			<div class="col-sm-7 vhidden"></div>
 			
 			<div class="col-sm-3 col-sm-offset-1">
 				<h3>
-					<a href="http://www.pescagrosa.com/contactenos/?es">Contáctenos</a>
+					<a href="./Contacto.html">Contáctenos</a>
 				</h3>
 			</div>
 			<div class="col-sm-7 vhidden"></div>
@@ -131,7 +131,7 @@
 					
 					<h1>Pescagrosa</h1>
 					<hr>
-					<p>Pescagrosa es una empresa ágil y moderna, siempre en busca de los mejores procesos para garantizar la calidad de nuestros productos y servicios así como la satisfacción de nuestros consumidores, creando mayor rentabilidad para nuestros clientes y mejores resultados para nuestros negocios, objetivos que logramos con rigurosos controles de calidad y guardando la armonía con el entorno.</p>				</div>
+					<p>Pescagrosa es una empresa ágil y moderna, siempre en busca de los mejores procesos de trabajo para garantizar la calidad de nuestros productos y servicios así como la satisfacción de nuestros consumidores, creando mayor rentabilidad para nuestros clientes y mejores resultados para nuestros negocios, objetivo que logramos con rigurosos controles de calidad.</p>				</div>
 			</div>
 	    </div>
     </section>
@@ -146,7 +146,7 @@
 				<div class="col-sm-6">
 					<h1>Visión</h1>
 					<hr>
-					<p>Liderar la actividad agroindustrial nacional siendo reconocidos por nuestra capacidad de satisfacer los requisitos de nuestros clientes, innovando a través de la búsqueda continua de mejoras en la gestión, con un claro compromiso con nuestros trabajadores y el cuidado del entorno.</p>				</div>
+					<p>Liderar la actividad pesquera y acuícola nacional siendo reconocidos por nuestra capacidad de satisfacer las expectativas de nuestros clientes, innovando a través de la búsqueda continua de mejoras en la gestión, con un claro compromiso con sus trabajadores y el cuidado del medio ambiente.</p>				</div>
 			</div>
 	    </div>
     </section>
@@ -160,7 +160,7 @@
 				<div class="col-sm-6">
 					<h1>Misión</h1>
 					<hr>
-					<p>Ser una compañía líder en la agroindustria, con énfasis en el manejo sustentable de los recursos en sus procesos productivos, cuidando el medio ambiente y creando valor tanto para sus accionistas, clientes y colaboradores, entregando productos y servicios cuyos estándares de calidad sean reconocidos en los diferentes mercados donde la empresa se encuentre presente.</p>				</div>
+					<p>Ser una compañía líder en la industria pesquera y acuícola, con énfasis en el adecuado sustentable manejo de los recursos en sus procesos productivos, cuidando el medio ambiente y creando valor tanto para sus accionistas, clientes y colaboradores, entregando productos y servicios cuyos estándares de calidad sean reconocidos en los diferentes mercados donde la empresa se encuentre presente.</p>				</div>
 			</div>
 	    </div>
     </section>
@@ -174,9 +174,8 @@
 				<div class="col-sm-6">
 					<h1>Nuestras plantas</h1>
 					<hr>
-					<p>Contamos con tecnología de punta para la producción y selección de nuestra oferta exportable. Nuestros procesos inician en fincas propias o proveedores calificados, luego de un análisis riguroso y sistemático de calidad. Procesamos nuestros productos ajustados a las necesidades específicas y pedidos de nuestros clientes, manteniendo siempre su frescura y calidad.
-
-La calidad de nuestros productos está garantizada, porque son procesados en plantas industriales calificadas, las mismas que cumplen con normas internacionales establecidas por los países destino y el mercado internacional: FSSC22000, HACCP, BRC, GlobalGap, entre otras.</p>				</div>
+					<p>Contamos con tecnología de punta para la producción y selección de los carídeos. El proceso en la planta arranca al recibir el camarón fresco de excelente calidad proveniente de fincas propias o proveedores calificados, luego de un análisis riguroso y sistemático de calidad.Dependiendo de las necesidades específicas y pedidos de nuestros clientes, el camarón se procesa entero, sin cabeza o pelado, manteniendo siempre su frescura y textura.
+</p><p>La calidad de nuestros productos está garantizada, porque los producimos en plantas industriales modernas de pescado y camarón, las mismas que cumplen con las normas internacionales establecidas por la FDA, todo bajo control e instructivos del plan HACCP. Además contamos con la Certificación BRC.</p>				</div>
 			</div>
 	    </div>
     </section>
@@ -216,7 +215,7 @@ La calidad de nuestros productos está garantizada, porque son procesados en pla
 		    <div id="copyright" class="row">
 			    <div class="col-sm-12">
 				    <div id="footer-copy">
-						© 2021 Todos los derechos reservados Pescagrosa<br> Diseñado por <a href="http://zebraestudio.com/" target="_blank">John Idrovo</a>				    </div>
+						© 2021 Todos los derechos reservados Pescagrosa<br> Diseñado por <a href="#" target="_blank">John Idrovo</a>				    </div>
 			    </div>
 		    </div>
 		    
@@ -227,7 +226,7 @@ La calidad de nuestros productos está garantizada, porque son procesados en pla
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="./Quienes_somos_files/jquery.min.js.descarga"></script>
-    <script>window.jQuery || document.write('<script src="http://www.pescagrosa.com/js/jquery.min.js"><\/script>')</script>
+    <script>window.jQuery || document.write('<script src="./Quienes_somos_files/jquery.min.js"><\/script>')</script>
     <script src="./Quienes_somos_files/bootstrap.min.js.descarga"></script>
     <script src="./Quienes_somos_files/ie10-viewport-bug-workaround.js.descarga"></script>
 	<script src="./Quienes_somos_files/web.js.descarga"></script>	
