--- a/Frutas.html
+++ b/Frutas.html
@@ -56,7 +56,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-xs-12">
-				<a href="./index_files" class="mb-logo-inside"></a>
+				<a href="./index.html" class="mb-logo-inside"></a>
 			</div>
 		</div>
 	</div>
