--- a/Frutas.html
+++ b/Frutas.html
@@ -144,6 +144,22 @@
   							<a href="#">Ver más</a>
   						</div>
   						</a>
+						<a href="#">
+  							<div class="card">
+  							<img src="./Frutas_files/pitahayaA.png">
+  							<h4>Pitahaya</h4>
+  							<h4>amarilla</h4>
+  							<a href="#">Ver más</a>
+  						</div>
+  						</a>
+  						<a href="#">
+  							<div class="card">
+  							<img src="./Frutas_files/pitahayaR.png">
+  							<h4>Pitahaya</h4>
+  							<h4>roja</h4>
+  							<a href="#">Ver más</a>
+  						</div>
+  						</a>
   					</div>
 					<img src="./Frutas_files/cabecera-1024x482.jpg" class="img-responsive" width="200%">
 				</div>
