--- a/Frutas.html
+++ b/Frutas.html
@@ -130,7 +130,7 @@
 							<i class="fas fa-chevron-left"></i>
 						</button>
 						<div class="carousel__lista">
-							<a href="#">
+							<a href="./Banano.html">
   							<div class="card" >
   							<img src="./Frutas_files/banano.png">
   							<h4>Banano</h4>
