--- a/Banano.html
+++ b/Banano.html
@@ -153,7 +153,7 @@
 
     </section>
 
-
+<img class="logo44" src="./Banano_files/logo4.png">
 <h4 class="caracts">CARACTERÍSTICAS NUTRICIONALES</h4>    
 <div class="tables">
 	<table class="tg" style="undefined;table-layout: fixed; width: 541px">
