--- a/Banano.html
+++ b/Banano.html
@@ -58,8 +58,8 @@
 <nav id="mb-header">
 	<div class="container">
 		<div class="row">
-			<div class="col-xs-12">
-				<a href="http://www.pescagrosa.com/?es" class="mb-logo-inside"></a>
+			<div class="col-xs-12" style="height: 20px;">
+				
 			</div>
 		</div>
 	</div>
