--- a/Banano.html
+++ b/Banano.html
@@ -76,45 +76,45 @@
 			<div id="somos" class="col-sm-7 vhidden">
 				<ul>
 					<li><a href="./Quienes_somos.html">Pescagrosa</a></li>
-					<li><a href="http://www.pescagrosa.com/pescagrosa/?es#vision">Visión</a></li>
-					<li><a href="http://www.pescagrosa.com/pescagrosa/?es#mision">Misión</a></li>
+					<li><a href="./Quienes_somos.html">Visión</a></li>
+					<li><a href="./Quienes_somos.html">Misión</a></li>
 				</ul>
 			</div>
 			<div class="col-sm-3 col-sm-offset-1">
 				<h3 class="mb-dropdown">
-					<a href="http://www.pescagrosa.com/nuestro-camaron/?es#productos" class="active">Productos</a>
+					<a href="./index.html" class="active">Productos</a>
 				</h3>
 			</div>
 			<div id="productos" class="col-sm-7">
 				<ul>
-					<li><a href="http://www.pescagrosa.com/nuestro-camaron/?es" class="active">Nuestros camarones</a></li>
-					<li><a href="http://www.pescagrosa.com/nuestros-peces/?es">Nuestros peces</a></li>
+					<li><a href="./Frutas.html" class="active">Frutas</a></li>
+					<li><a href="./Vegetales.html">Vegetales</a></li>
 				</ul>
 			</div>
 			
 			<div class="col-sm-3 col-sm-offset-1">
 				<h3 class="mb-dropdown">
-					<a href="http://www.pescagrosa.com/nuestro-camaron/?es#procesos">Procesos</a>
+					<a href="./index.html">Procesos</a>
 				</h3>
 			</div>
 			<div id="procesos" class="col-sm-7 vhidden">
 				<ul>
-					<li><a href="http://www.pescagrosa.com/procesos/?es#alimentacion">Alimentación y clima</a></li>
-					<li><a href="http://www.pescagrosa.com/procesos/?es#beneficios">Beneficios nutritivos</a></li>
-					<li><a href="http://www.pescagrosa.com/procesos/?es#cultivo">Cultivo sostenible</a></li>
+					<li><a href="./Alimentacion.html">Alimentación y clima</a></li>
+					<li><a href="./Alimentacion.html">Beneficios nutritivos</a></li>
+					<li><a href="./Alimentacion.html">Cultivo sostenible</a></li>
 				</ul>
 			</div>
 			
 			<div class="col-sm-3 col-sm-offset-1">
 				<h3>
-					<a href="http://www.pescagrosa.com/exportaciones/?es">Exportaciones</a>
+					<a href="./Exportaciones.html">Exportaciones</a>
 				</h3>
 			</div>
 			<div class="col-sm-7 vhidden"></div>
 			
 			<div class="col-sm-3 col-sm-offset-1">
 				<h3>
-					<a href="http://www.pescagrosa.com/contactenos/?es">Contáctenos</a>
+					<a href="./Contacto.html">Contáctenos</a>
 				</h3>
 			</div>
 			<div class="col-sm-7 vhidden"></div>
@@ -288,7 +288,7 @@
 		    <div id="copyright" class="row">
 			    <div class="col-sm-12">
 				    <div id="footer-copy">
-						© 2016 Todos los derechos reservados Pescagrosa<br> Diseñado por <a href="#" target="_blank">John Idrovo</a>				    </div>
+						© 2021 Todos los derechos reservados Pescagrosa<br> Diseñado por <a href="#" target="_blank">John Idrovo</a>				    </div>
 			    </div>
 		    </div>
 		    
@@ -299,7 +299,7 @@
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="./Banano_files/jquery.min.js.descarga"></script>
-    <script>window.jQuery || document.write('<script src="http://www.pescagrosa.com/js/jquery.min.js"><\/script>')</script>
+    <script>window.jQuery || document.write('<script src="./Banano_files/jquery.min.js"><\/script>')</script>
     <script src="./Banano_files/bootstrap.min.js.descarga"></script>
     <script src="./Banano_files/ie10-viewport-bug-workaround.js.descarga"></script>
 	<script src="./Banano_files/web.js.descarga"></script>	
