--- a/Banano.html
+++ b/Banano.html
@@ -121,6 +121,7 @@
 		</div>
 	</div>
 </section>	
+
     <section id="mb-headline">
 	    <div class="container-fluid">
 			<div class="row">
@@ -128,6 +129,7 @@
   					<div class="img-size" >
   						<img src="./Banano_files/cabecera-1024x482.jpg" class="img-responsive" width="100%">
   					</div>
+            
   					<p class="po" style="text-align: left;" style="left: 30px;">Potasio</p>
   					<p class="po_n" style="text-align: left;" style="left: 30px;">422</p>
   					<p class="po_l" style="text-align: left;" style="left: 30px;">mg</p>
@@ -152,6 +154,17 @@
 	    </div>
 
     </section>
+<hr class="lineH">
+<h4 class="produ">PRODUCCIÓN</h4>
+<h5 class="produT">Producimos productos de Calidad y cumplimos con todos los requisitos para ser aceptados y calificados para exportación.</h5>
+
+<h4 class="cali">CALIDAD</h4>
+<h5 class="caliT">Calidad Pescagrosa: Calidad derivada de la buena práctica agroindustrial porque pensamos en el consumidor.</h5>
+
+<h4 class="salu">SALUD</h4>
+<h5 class="saluT">Por su Salud: Seleccionamos para Ud. los mejores productos de nuestras plantaciones para proveer seguridad alimenticia de calidad.</h5>
+
+<hr class="lineHT">
 
 <img class="logo44" src="./Banano_files/logo4.png">
 <h4 class="caracts">CARACTERÍSTICAS NUTRICIONALES</h4>    
@@ -280,8 +293,9 @@
 					<span class="border-footer"></span>
 				</div>
 				<div class="col-sm-4">
-					(593-4) 4544934<br>
-					info@pescagrosa.com
+					(593-9) 59883789<br>
+          info@pescagrosa.com
+          jvelez@pescagrosa.com
 				</div>
 		    </div>
 		    
