--- a/Banano.html
+++ b/Banano.html
@@ -165,7 +165,29 @@
 <h5 class="saluT">Por su Salud: Seleccionamos para Ud. los mejores productos de nuestras plantaciones para proveer seguridad alimenticia de calidad.</h5>
 
 <hr class="lineHT">
-
+<div class="botones" >
+  <button class="or" onclick="Origen()">Orígenes</button>
+  <button class="bo" onclick="Botanica()">Botánica</button>
+  <button class="calid" onclick="Calidad()">Calidad Pescagrosa</button>
+  <button class="fac" onclick="Factores()">Factores que afectan la productividad del cultivo</button>
+</div>
+<div class="verticalLine">
+</div>
+<p id="parrafoPrincipal">El origen del banano en el mundo aparentemente está en el subcontinente hindú en Asia y es trasladado a América<br> conjuntamente con las corrientes migratorias de los comerciantes Europeos en el siglo XVI. De allí varias variedades<br> de musáceas crecen en forma natural y salvaje en<br> La creciente demanda del banano en Europa y Estados Unidos y el impacto de plagas y huracanes en las plantaciones<br> Centroamericanas influyen al gobierno de Galo Plaza Lasso a modernizar la producción y exportación de la fruta.<br>La mano de obra barata, la disponibilidad de tierra agrícola, la política de fomento del gobierno -incluyendo créditos y<br> obras de infraestructura- y la ausencia de plagas y huracanes en el país son las condiciones perfectas para<br> eventualmente posicionar al Ecuador como el primer productor mundial de la fruta.<br>La exportación de banano domina la economía ecuatoriana hasta los años 70, cuando es suplantada por el petróleo.<br>Actualmente Ecuador exporta semanalmente un promedio de 5 millones de cajas, cultivadas en aproximadamente<br> 230 mil hectáreas.</p>
+<div>
+  <p id="ms_1" style="font-size: 15px;position: absolute; ;top: 1000px;left: 319px;"></p>
+</div>
+<div>
+  <p id="ms_2" style="font-size: 15px;position: absolute; top: 1000px;left: 319px;"></p>
+</div>
+<div>
+  <p id="ms_3" style="font-size: 15px;position: absolute; top: 980px;left: 319px;"></p>
+</div>  
+<div>
+  <p id="ms_4" style="font-size: 15px;position: absolute; top: 977px;left: 319px;"></p>
+</div>
+<hr class="lineHD">
+</div>
 <img class="logo44" src="./Banano_files/logo4.png">
 <h4 class="caracts">CARACTERÍSTICAS NUTRICIONALES</h4>    
 <div class="tables">
@@ -320,6 +342,7 @@
 	<script src="https://kit.fontawesome.com/2c36e9b7b1.js" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/glider-js@1.7.3/glider.min.js"></script>
 	<script src="./Banano_files/app.js"></script>
+  <script src="./Banano_files/botones.js"></script>
 
   
 
