--- a/Frutas.html
+++ b/Frutas.html
@@ -295,7 +295,7 @@
 		    <div id="copyright" class="row">
 			    <div class="col-sm-12">
 				    <div id="footer-copy">
-						© 2016 Todos los derechos reservados Pescagrosa<br> Diseñado por <a href="http://zebraestudio.com/" target="_blank">Zebra Comunicaciones</a>				    </div>
+						© 2021 Todos los derechos reservados Pescagrosa<br> Diseñado por <a href="" target="_blank">John Idrovo</a>				    </div>
 			    </div>
 		    </div>
 		    
