--- a/Contacto.html
+++ b/Contacto.html
@@ -259,15 +259,16 @@
 					<span class="border-footer"></span>
 				</div>
 				<div class="col-sm-4">
-					(593-4) 4544934<br>
+					(593-9) 59883789<br>
 					info@pescagrosa.com
+					jvelez@pescagrosa.com
 				</div>
 		    </div>
 		    
 		    <div id="copyright" class="row">
 			    <div class="col-sm-12">
 				    <div id="footer-copy">
-						© 2016 Todos los derechos reservados Pescagrosa<br> Diseñado por <a href="http://zebraestudio.com/" target="_blank">Zebra Comunicaciones</a>				    </div>
+						© 2021 Todos los derechos reservados Pescagrosa<br> Diseñado por <a href="" target="_blank">John Idrovo</a>				    </div>
 			    </div>
 		    </div>
 		    
