--- a/NuestroCamaron.html
+++ b/NuestroCamaron.html
@@ -214,8 +214,9 @@
 					<span class="border-footer"></span>
 				</div>
 				<div class="col-sm-4">
-					(593-4) 4544934<br>
+					(593-9) 59883789<br>
 					info@pescagrosa.com
+					jvelez@pescagrosa.com
 				</div>
 		    </div>
 		    
