--- a/Exportaciones.html
+++ b/Exportaciones.html
@@ -65,51 +65,51 @@
 		<div class="row">
 			<div class="col-sm-3 col-sm-offset-1">
 				<h3 class="mb-dropdown">
-					<a href="http://www.pescagrosa.com/exportaciones/?es#somos">¿Quiénes Somos?</a>
+					<a href="./index.html">¿Quiénes Somos?</a>
 				</h3>
 			</div>
 			<div id="somos" class="col-sm-7 vhidden">
 				<ul>
-					<li><a href="http://www.pescagrosa.com/pescagrosa/?es#pescagrosa">Pescagrosa</a></li>
-					<li><a href="http://www.pescagrosa.com/pescagrosa/?es#vision">Visión</a></li>
-					<li><a href="http://www.pescagrosa.com/pescagrosa/?es#mision">Misión</a></li>
+					<li><a href="./Quienes_somos.html">Pescagrosa</a></li>
+					<li><a href="./Quienes_somos.html">Visión</a></li>
+					<li><a href="./Quienes_somos.html">Misión</a></li>
 				</ul>
 			</div>
 			<div class="col-sm-3 col-sm-offset-1">
 				<h3 class="mb-dropdown">
-					<a href="http://www.pescagrosa.com/exportaciones/?es#productos">Productos</a>
+					<a href="./index.html">Productos</a>
 				</h3>
 			</div>
 			<div id="productos" class="col-sm-7 vhidden">
 				<ul>
-					<li><a href="http://www.pescagrosa.com/nuestro-camaron/?es">Nuestros camarones</a></li>
-					<li><a href="http://www.pescagrosa.com/nuestros-peces/?es">Nuestros peces</a></li>
+					<li><a href="./Frutas.html">Frutas</a></li>
+					<li><a href="./Vegetales">Vegetales</a></li>
 				</ul>
 			</div>
 			
 			<div class="col-sm-3 col-sm-offset-1">
 				<h3 class="mb-dropdown">
-					<a href="http://www.pescagrosa.com/exportaciones/?es#procesos">Procesos</a>
+					<a href="./index.html">Procesos</a>
 				</h3>
 			</div>
 			<div id="procesos" class="col-sm-7 vhidden">
 				<ul>
-					<li><a href="http://www.pescagrosa.com/procesos/?es#alimentacion">Alimentación y clima</a></li>
-					<li><a href="http://www.pescagrosa.com/procesos/?es#beneficios">Beneficios nutritivos</a></li>
-					<li><a href="http://www.pescagrosa.com/procesos/?es#cultivo">Cultivo sostenible</a></li>
+					<li><a href="./Alimentacion.html">Alimentación y clima</a></li>
+					<li><a href="./Alimentacion.html">Beneficios nutritivos</a></li>
+					<li><a href="./Alimentacion.html">Cultivo sostenible</a></li>
 				</ul>
 			</div>
 			
 			<div class="col-sm-3 col-sm-offset-1">
 				<h3>
-					<a href="http://www.pescagrosa.com/exportaciones/?es" class="active">Exportaciones</a>
+					<a href="./Exportaciones.html" class="active">Exportaciones</a>
 				</h3>
 			</div>
 			<div class="col-sm-7 vhidden"></div>
 			
 			<div class="col-sm-3 col-sm-offset-1">
 				<h3>
-					<a href="http://www.pescagrosa.com/contactenos/?es">Contáctenos</a>
+					<a href="./Contacto.html">Contáctenos</a>
 				</h3>
 			</div>
 			<div class="col-sm-7 vhidden"></div>
@@ -174,7 +174,7 @@
 				</div>
 				<div id="middle-text" class="col-sm-4">
 					Puerto Santa Ana, Edificio<br>
-					The Point piso 25 oficina 2501<br>
+					The Point piso 25 oficina 2502<br>
 					Guayaquil - Ecuador
 					
 					<span class="border-footer"></span>
@@ -188,7 +188,7 @@
 		    <div id="copyright" class="row">
 			    <div class="col-sm-12">
 				    <div id="footer-copy">
-						© 2016 Todos los derechos reservados Pescagrosa<br> Diseñado por <a href="http://zebraestudio.com/" target="_blank">Zebra Comunicaciones</a>				    </div>
+						© 2021 Todos los derechos reservados Pescagrosa<br> Diseñado por <a href="" target="_blank">John Idrovo</a>				    </div>
 			    </div>
 		    </div>
 		    
